--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "backend/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint:js": "eslint --format codeframe '**/*.js' '**/*.jsx' ",
     "start": "node backend/index.js",
     "backend": "nodemon backend/index.js",
     "frontend": "webpack-dev-server --mode development --devtool inline-source-map --hot",
@@ -45,6 +46,7 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.4.0",
+    "eslint-import-resolver-node": "^0.3.2",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
