--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "homepage": "https://github.com/javiergarciagonzalez/sofatorrent#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "rarbg-api": "^1.1.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
