--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "rarbg-api": "^1.1.3",
     "react": "^16.10.2",
