--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/javiergarciagonzalez/sofatorrent#readme",
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
@@ -37,8 +38,10 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webtorrent": "^0.107.16"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -61,6 +64,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
+    "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.3",
