--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "plugins": ["prettier"],
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "parser": "babel-eslint",
     "parserOptions": {
