--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Coziest way to watch torrents",
   "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint:js": "eslint --format codeframe '**/*.js' '**/*.jsx' ",
     "start": "node backend/index.js",
     "backend": "nodemon backend/index.js",
@@ -66,6 +66,7 @@
     "file-loader": "^4.2.0",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^1.19.3",
     "postcss-loader": "^3.0.0",
