Add sourcemaps per environment

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "backend/index.js",
   "scripts": {
     "test": "jest",
-    "build": "webpack",
+    "build": "ENV=production webpack",
     "lint:js": "eslint --format codeframe '**/*.js' '**/*.jsx' ",
     "start": "node backend/index.js",
     "backend": "nodemon backend/index.js",
     "frontend": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "develop": "concurrently \"npm run backend\" \"npm run frontend\" --names \"🌐, 💻\" --prefix name"
+    "develop": "ENV=development concurrently \"npm run backend\" \"npm run frontend\" --names \"🌐, 💻\" --prefix name"
   },
   "repository": {
     "type": "git",
