--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Node CI
+name: Sofatorrent CI
 
 on: [push]
 
@@ -20,7 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
-        npm run build --if-present
+        ENV=production npm run build --if-present
         npm test
       env:
         CI: true
