--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,10 @@
   "description": "Coziest way to watch torrents",
   "main": "backend/index.js",
   "scripts": {
-    "test": "jest",
     "build": "ENV=production webpack",
-    "lint:js": "eslint --format codeframe '**/*.js' '**/*.jsx' ",
-    "start": "node backend/index.js",
-    "backend": "nodemon backend/index.js",
-    "frontend": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "develop": "ENV=development concurrently \"npm run backend\" \"npm run frontend\" --names \"🌐, 💻\" --prefix name"
+    "develop": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "lint:js": "eslint --format table '**/*.js' '**/*.jsx' ",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,11 +28,8 @@
   "homepage": "https://github.com/javiergarciagonzalez/sofatorrent#readme",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "rarbg-api": "^1.1.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -53,7 +47,6 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^4.1.2",
     "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -69,7 +62,6 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^1.19.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "sass": "^1.23.0",
