--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,10 @@
   "name": "sofatorrent",
   "version": "0.0.1",
   "description": "Coziest way to watch torrents",
-  "main": "backend/index.js",
+  "main": "src/index.jsx",
   "scripts": {
     "build": "ENV=production webpack",
-    "develop": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "develop": "webpack serve --mode development --devtool inline-source-map --hot",
     "lint:js": "eslint --format table '**/*.js' '**/*.jsx' ",
     "test": "jest"
   },
@@ -27,49 +27,52 @@
   },
   "homepage": "https://github.com/javiergarciagonzalez/sofatorrent#readme",
   "dependencies": {
-    "@material-ui/core": "^4.6.0",
-    "lodash": "^4.17.15",
+    "@material-ui/core": "^4.11.3",
+    "buffer": "^6.0.3",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "webtorrent": "^0.107.16"
+    "webtorrent": "^0.114.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.5",
+    "@babel/core": "^7.12.16",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/runtime": "^7.12.13",
+    "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-import-resolver-node": "^0.3.2",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^5.0.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "sass": "^1.23.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "html-webpack-plugin": "^5.1.0",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.6",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
